k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: weight-tracker-app
spec:
    type: ClusterIP
    ports:
     - protocol: TCP 
       port: 80
       targetPort: 8080
    selector:
        app: weight-tracker-app
